dark mode fixes on join page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -397,12 +397,15 @@ footer p{
 /* -----Form----- */
 .ma1 {
     width: 95vw;
-    margin: auto;
+    margin: auto auto 10px auto;
     max-width: 400px;
+    background-color: var(--accent1-color);
+    padding: 30px 30px 5px 30px;
+    border: 5px solid var(--primary-color)
 }
 .ma1 fieldset {
     margin: .5rem 0;
-    border: 5px solid var(--primary-color);
+    border: 5px solid var(--secondary-color);
     border-radius: 10px;
     padding: .5rem 2%;
     display: flex;
@@ -503,10 +506,15 @@ th, td {
     border: 2px solid var(--secondary-color);
     font-size: small;
 }
-body.dark-mode thead{
-    background-color: var(--primary-color);
-    border: 2px solid var(--secondary-color)
-}
 tr:nth-child(even){
     background-color: var(--accent1-color);
+}
+body.dark-mode tr:nth-child(odd) {
+    color: var(--accent1-color);
+}
+body.dark-mode .mem-ben th{
+    color: var(--primary-color);
+}
+body.dark-mode tr:nth-child(even) {
+    color: var(--primary-color);
 }
